Testing flex-box gap fixes for browsers that do not support it yet... and yes, looking at you, Safari.

--- a/Responsive Web Design/Corgi-Express-Shop/style.css
+++ b/Responsive Web Design/Corgi-Express-Shop/style.css
@@ -231,3 +231,12 @@ footer {
   align-items: center;
   justify-content: space-between;
 }
+
+@media not all and (min-resolution:.001dpcm) { @media { 
+	nav > * { 
+		margin-right:20px; 
+	} 
+	.tier-wrapper > * {
+		margin-right:20px;
+	}
+} }
